added multiCreate and update methods (I can't write this tests. Please, I swear, I understand how it works, but...)
